# web-crawler-project

./: .gitconfig  .gitignore  .zsh_history  .zshrc  CHANGELOG.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
docker/: Dockerfile
examples/: basic_usage.py  enterprise_usage.py
scripts/: activate.sh
src/web_crawler/: __init__.py  async_crawler.py  cli.py  config_manager.py  crawler.py  dynamic_handler.py  enhanced_cli.py  monitoring.py  state_manager.py
tests/: test_crawler.py  test_dynamic_handler.py  test_state_manager.py
